Corrected style prop in video component and updated overflow settings

--- a/app/globals.css
+++ b/app/globals.css
@@ -166,3 +166,8 @@ font-weight: bold;
   margin-bottom: 20px;
   width: 100%;
 }
+
+video {
+  overflow: clip;  
+  object-fit: cover; 
+}
